# psplit

./: README.md  psplit.py  pyproject.toml  split_patch.py  test_psplit.py  test_split_patch.py
patches/: add.patch  big.patch  edit.patch  mv.patch  remove.patch
psplit/: __init__.py
test/: test_psplit.py
test_expected/: torch-_inductor-br.py-1.patch  torch-_inductor-br.py-2.patch  torch-_inductor-br.py-3.patch  torch-_inductor-br.py-4.patch  torch-_inductor-br.py-5.patch  torch-_inductor-br.py-6.patch  torch-_inductor-ir.py-1.patch  torch-_inductor-ir.py-2.patch  torch-_inductor-ir.py-3.patch
