[tool.poetry]
name = "psplit"
version = "1.0.3"
description = "✂️ Split git patch files ✂️"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "*"
tdir = "*"
ruff = "*"
mypy = "*"

[tool.poetry.scripts]
psplit = "psplit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
